# libft

./: .gitignore  CMakeLists.txt  Makefile  README.md  ft_atoi.c  ft_bzero.c  ft_count_digits.c  ft_free_mtrx.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_ischar.c  ft_isdigit.c  ft_islower.c  ft_isprint.c  ft_isspace.c  ft_isupper.c  ft_itoa.c  ft_itostr.c  ft_lstadd.c  ft_lstdel.c  ft_lstdel.cpp  ft_lstdelone.c  ft_lstiter.c  ft_lstlen.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memjoin.c  ft_memmove.c  ft_memrcpy.c  ft_memset.c  ft_power.c  ft_putchar.c  ft_putchar_fd.c  (+72 more)
ft_mt/: ft_print_sqmt.c
includes/: libft.h
